force-app/main/default/objects/KDCE_InventoryStock__c/KDCE_InventoryStock__c.object-meta.xml
<CustomObject>
    <label>Inventory Stock</label>
    <nameField>
        <displayFormat>IS-{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Stocks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>