force-app/main/default/objects/KDCE_InventoryStock__c/fields/ActualStockQty__c.field-meta.xml
<CustomField>
    <fullName>ActualStockQty__c</fullName>
    <description>실 재고 수량</description>
    <label>Actual Stock Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>