force-app/main/default/objects/KDCE_InventoryStock__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>제품</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Inventory Stocks</relationshipLabel>
    <relationshipName>InventoryStocks</relationshipName>
    <type>Lookup</type>
</CustomField>