force-app/main/default/objects/KDCE_InventoryStock__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <description>제품 명</description>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>