force-app/main/default/objects/KDCE_InventoryStock__c/fields/StockDate__c.field-meta.xml
<CustomField>
    <fullName>StockDate__c</fullName>
    <description>재고 일자</description>
    <label>Stock Date</label>
    <type>Date</type>
</CustomField>