force-app/main/default/objects/KDCE_InventoryStock__c/fields/StockQty__c.field-meta.xml
<CustomField>
    <fullName>StockQty__c</fullName>
    <description>재고 수량</description>
    <label>Stock Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>