force-app/main/default/objects/KDCE_InventoryStock__c/fields/StockStatus__c.field-meta.xml
<CustomField>
    <fullName>StockStatus__c</fullName>
    <label>Stock Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>