force-app/main/default/objects/KDCE_InventoryStock__c/fields/StoreCode__c.field-meta.xml
<CustomField>
    <fullName>StoreCode__c</fullName>
    <label>Store Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>