force-app/main/default/objects/KDCE_InventoryStock__c/fields/TotalStockQty__c.field-meta.xml
<CustomField>
    <fullName>TotalStockQty__c</fullName>
    <label>Total Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>