force-app/main/default/objects/KDCE_InventoryStock__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Store__c</columns>
    <columns>StockDate__c</columns>
    <columns>EANCode__c</columns>
    <columns>Product__c</columns>
    <columns>ProductCode__c</columns>
    <columns>ProductGroup__c</columns>
    <columns>ProductName__c</columns>
    <columns>ActualStockQty__c</columns>
    <columns>StockQty__c</columns>
    <columns>StockStatus__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>